# figaroh-plus

./: CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: docs.yml
Semi_Taks_T1/: CMakeLists.txt  Semi_Taks_T1.urdf  Semi_Taks_T1.xml  Semi_Taks_T1_calibrated.urdf  batch_rotate_stl.py  calculate_inertia.py  calculate_inertia_from_stl.py  package.xml  scene_Semi_Taks_T1.xml  update_inertia_all_files.py
Semi_Taks_T1/config/: joint_names_Semi_Taks_T1.yaml
Semi_Taks_T1/launch/: display.launch  gazebo.launch
Taks_T1/: Taks_T1_calibrated.urdf
calibration_pipeline/: README.md  run_pipeline.py  step1_visualize.py  step2_collect_data.py  step3_calibrate_urdf.py  step4_urdf_to_mujoco.py
calibration_pipeline/common/: mujoco_utils.py  robot_calibration.py  urdf_utils.py
calibration_pipeline/config/: Semi_Taks_T1.yaml  Semi_Taks_T1_unified.yaml  Taks_T1.yaml  Taks_T1_unified.yaml
calibration_pipeline/data/Semi_Taks_T1/: calib_results.yaml  calib_results_v2.yaml  candidate_poses.csv  measurements.csv
calibration_pipeline/data/Taks_T1/: calib_results_v2.yaml  candidate_poses.csv  measurements.csv
docs/source/: index.rst
docs/source/modules/: utils.rst
examples/mate/: calibration.py  calibration_plane.py
examples/mate/utils/: mate_tools.py
examples/talos/: calibration_torsoarm.py
examples/tiago/: optimal_trajectory.py
examples/tiago/utils/: tiago_tools.py
src/figaroh/calibration/: base_calibration.py  calibration_tools.py  config.py  data_loader.py
src/figaroh/identification/: base_identification.py  config.py  identification_tools.py  parameter.py
src/figaroh/optimal/: base_optimal_calibration.py  (+4 more)
(+11 files in other folders)
