[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "figaroh"
version = "0.1.0"
description = "Robot and Human Identification Tools"
readme = "README.md"
requires-python = ">=3.8"
license = { file = "LICENSE" }
dependencies = [
    "numpy",
    "scipy",
    "numdifftools",
    "ndcurves",
    "matplotlib",
    "meshcat",
    "pandas",
    "rospkg",
    "quadprog",
]

[tool.hatch.build.targets.wheel]
packages = ["src/figaroh"]

[tool.hatch.build.targets.wheel.force-include]
# Only include core package, exclude examples and models

[tool.hatch.build.targets.sdist]
exclude = [
    "examples/",
    "models/",
    "docs/build/",
]

[project.urls]
Homepage = "https://github.com/thanhndv212/figaroh"
Repository = "https://github.com/thanhndv212/figaroh"
Issues = "https://github.com/thanhndv212/figaroh/issues"
Examples = "https://github.com/thanhndv212/figaroh-examples"
